--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
-<IfModule mod_rewrite.c>
-    RewriteEngine On
-    RewriteBase /MotorcycleRental-mvc/
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^ index.php [L]
-</IfModule>
+
+RewriteEngine On
+RewriteBase /MotorcycleRental-mvc/
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.+)$ index.php/$1 [L]
+
